<resources>
    <string name="app_name">Array project 3</string>

    <string name="Gender_choose">Choose gender</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="promotion">Promotion</string>
    <string name="favorite">Favorite Restaurent</string>
    <string name="history">History Restaurent</string>
    <string name="near">List Shop Nearby</string>
    <string name="email">E-mail</string>
    <string name="username">Username</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="password">Password</string>
    <string name="repassword">RE-Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="have_account">Already a member? Login</string>
    <string name="control">Control</string>
    <string name="shop_search">Shop search</string>
    <string name="branch_search">Branch search</string>
    <string name="dateformate">YYYY-MM-DD</string>

    <string name="message_alert">Message alert</string>
    <string name="notification_alert">Notification alert</string>
    <string name="language">Language</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="logout">Logout</string>

    <string name="current_queue">CURRENT QUEUE</string>
    <string name="waiting_queue">Waiting Queue</string>
    <string name="time_wait">Est. time wait (min.)</string>
    <string name="_your">YOUR</string>
    <string name="_queue">QUEUE</string>
    <string name="date_time">Date/Time</string>
    <string name="ddmmyyyy">dd/mm/yyyy</string>
    <string name="hhmmss">hh:mm:ss</string>

    <string name="ask_logout">Do you want to logout ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="map">Map</string>

    <string name="areyousure">Are you sure?</string>
    <string name="cancel">No,cancel plx!</string>
    <string name="cancelled">Cancelled</string>
    <string name="deleted">Deleted</string>
    <string name="reserve">Reserve success</string>
    <string name="sure">Yes,delete it!</string>
    <string name="close">Close</string>

    <string name="numberofseat">Number of Seat(s)</string>
    <string name="reservenow">RESERVE NOW</string>

    <string name="search">Search</string>


</resources>
